2008-07-29  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (dns_servers_changed, dns_searches_changed): remove, validation
			handled by ui_to_setting() now
		- (ui_to_setting): validate here too
		- (validate): use ui_to_setting() for partial validation

2008-07-28  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_device_added): disconnect from the Settings object's
			new-connection signal when the device is destroyed to prevent
			callbacks for invalid, removed devices (rh #457380)

2008-07-28  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- (ws_wep_key_new): WEP auth method and key indexes are pretty pointless
			for Ad-Hoc networks; hide them in the Ad-Hoc case

	* src/wireless-dialog.c
	  src/connection-editor/page-wireless-security.c
		- (security_combo_init, ce_page_wireless_security_new): fix up for
			above change

2008-07-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
		- (vpn_get_plugins): look for UI plugins in $LIBDIR/NetworkManager to
			match NM svn 3863 and later

2008-07-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/nm-connection-editor-service.xml
		- Add service definition for single-app-instance D-Bus API

	* src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- (add_connection_tab): keep connection type list around for later
		- (add_connection_tabs): don't free connection type lists since they
			are now kept around by add_connection_tab()
		- (nm_connection_list_set_type): new function; given a connection type
			select that type's tab in the connection list and bring the
			connection list window to the front

	* src/connection-editor/main.c
		- Implement a single-app-instance object that exports a D-Bus API to
			accept the same args that the connection editor does on the command
			line