@@ -1,3 +1,9 @@
+2008-07-31  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-ip4.c
+		- (method_changed): tighten up UI options; disable widgets where the
+			option doesn't make sense for the IP4 method chosen
+
 2008-07-29  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/page-ip4.c
